<resources>
    <string name="app_name">Media Collection</string>
    <string name="type">Type:</string>
    <string name="book">Book</string>
    <string name="movie">Movie</string>
    <string name="music">Music</string>
    <string name="video">Video</string>
    <string name="producer">Producer</string>
    <string name="content_name">Content Name</string>
    <string name="content_image">Content Image</string>
    <string name="links">Links</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="desc_content_image">Content Image</string>
    <string name="digits">0123456789 qwertyuıopğüasdfghjklşi,zxcvbnmöç.QWERTYUIOPĞÜASDFGHJKLŞİ;ZXCVBNMÖÇ:!\'^+%&amp;/()=?_>£#$½{[]}\|</string>
    <string name="wipe_all_data">Wipe All Data</string>
</resources>