<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp"
    tools:context=".activities.ModifyActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/modifyConstraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/modifyImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/content_image" />

        <EditText
            android:id="@+id/modifyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/content_name"
            app:layout_constraintLeft_toLeftOf="@+id/modifyConstraint"
            app:layout_constraintRight_toRightOf="@+id/modifyConstraint"
            app:layout_constraintTop_toBottomOf="@id/modifyImage"
            android:layout_marginTop="16dp"
            android:importantForAutofill="no"
            android:digits="@string/digits"/>

        <EditText
            android:id="@+id/modifyProducer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/producer"
            android:inputType="textPersonName"
            android:maxLines="1"
            app:layout_constraintLeft_toLeftOf="@+id/modifyConstraint"
            app:layout_constraintRight_toRightOf="@+id/modifyConstraint"
            app:layout_constraintTop_toBottomOf="@id/modifyName"
            android:importantForAutofill="no"
            android:digits="@string/digits"/>

        <RadioGroup
            android:id="@+id/modifyTypeGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:checkedButton="@id/modifyBook"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="@id/modifyImage"
            app:layout_constraintRight_toRightOf="@id/modifyImage"
            app:layout_constraintTop_toBottomOf="@id/modifyProducer">

            <RadioButton
                android:id="@+id/modifyBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book" />

            <RadioButton
                android:id="@+id/modifyMovie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie" />

            <RadioButton
                android:id="@+id/modifyMusic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/music" />

            <RadioButton
                android:id="@+id/modifyVideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/video" />

        </RadioGroup>

        <EditText
            android:id="@+id/modifyLinks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/links"
            android:importantForAutofill="no"
            android:inputType="textUri|textWebEditText|textMultiLine"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/modifyTypeGroup" />

        <Button
            android:id="@+id/modifyButtonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/modifyImage"
            app:layout_constraintRight_toLeftOf="@+id/modifyButtonCancel"
            app:layout_constraintTop_toBottomOf="@id/modifyLinks"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:text="@string/save" />

        <Button
            android:id="@+id/modifyButtonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/modifyButtonSave"
            app:layout_constraintRight_toRightOf="@+id/modifyImage"
            app:layout_constraintTop_toBottomOf="@id/modifyLinks"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:text="@string/cancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
